--- a/hvigor/hvigor-config.json5
+++ b/hvigor/hvigor-config.json5
@@ -1,10 +1,9 @@
 {
-  "hvigorVersion": "file:F:\\soft\\harmonyos\\503Config\\DevEco Studio\\tools\\hvigor\\dependencies\\hvigor-4.2.0.tgz",
+  "modelVersion": "5.0.0",
   "dependencies": {
-    "@ohos/hvigor-ohos-plugin": "file:F:\\soft\\harmonyos\\503Config\\DevEco Studio\\tools\\hvigor\\dependencies\\hvigor-ohos-plugin-4.2.0.tgz"
   },
   "execution": {
-    // "analyze": "default",                    /* Define the build analyze mode. Value: [ "default" | "verbose" | false ]. Default: "default" */
+    // "analyze": "normal",                     /* Define the build analyze mode. Value: [ "normal" | "advanced" | false ]. Default: "normal" */
     // "daemon": true,                          /* Enable daemon compilation. Value: [ true | false ]. Default: true */
     // "incremental": true,                     /* Enable incremental compilation. Value: [ true | false ]. Default: true */
     // "parallel": true,                        /* Enable parallel compilation. Value: [ true | false ]. Default: true */
@@ -17,6 +16,7 @@
     // "stacktrace": false                      /* Disable stacktrace compilation. Value: [ true | false ]. Default: false */
   },
   "nodeOptions": {
-    // "maxOldSpaceSize": 4096                  /* Enable nodeOptions maxOldSpaceSize compilation. Unit M. Used for the daemon process */
+    // "maxOldSpaceSize": 8192                  /* Enable nodeOptions maxOldSpaceSize compilation. Unit M. Used for the daemon process. Default: 8192*/
+    // "exposeGC": true                         /* Enable to trigger garbage collection explicitly. Default: true*/
   }
 }
