--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,5 +1,5 @@
 {
-  "name": "harmonyosnet",
+  "modelVersion": "5.0.0",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "",
@@ -8,7 +8,7 @@
   "dependencies": {
   },
   "devDependencies": {
-    "@ohos/hypium": "1.0.15",
-    "@ohos/hamock": "1.0.0-rc"
+    "@ohos/hypium": "1.0.18",
+    "@ohos/hamock": "1.0.0"
   }
 }
